cucumber reporting and parallel execution

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
     <version>1.0.1</version>
     <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+    <dependency>
+      <groupId>net.masterthought</groupId>
+      <artifactId>cucumber-reporting</artifactId>
+      <version>5.5.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -78,5 +85,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
